# simworld

./: .env.example  .gitignore  LICENSE  README.md  RUN_INSTRUCTIONS.md  demo.py  docker-compose.yml  test_fetch.py
backend/: init_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 396160130b55_initial_migration.py
backend/api/: deps.py  main.py  router.py
backend/api/routes/: agents.py  auth.py  calibrations.py  reports.py  scenarios.py  seed.py  simulations.py  worlds.py
backend/core/: agent_factory.py  config.py  crud.py  exceptions.py  graph_builder.py  llm_client.py  logging.py  report_agent.py  scenario.py  simulation.py
backend/db/: neo4j.py  session.py
backend/models/: __init__.py  agent_persona.py  base.py  calibration_entry.py  organisation.py  report.py  scenario.py  seed_material.py  simulation_run.py  simulation_state.py  world.py
backend/schemas/: __init__.py  agent.py  calibration.py  report.py  scenario.py  simulation.py  world.py
backend/tests/test_api/: test_integration.py  test_router.py
backend/tests/test_core/: test_agent_factory.py  test_config.py  test_db.py  test_exceptions.py  test_graph_builder.py  test_llm_client.py  test_logging.py  test_models.py  test_report_agent.py  test_scenario.py  test_schemas.py  test_simulation.py
backend/tests/test_workers/: test_simulation_worker.py
backend/workers/: __init__.py  celery_app.py  ingest.py  report.py  simulation.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/dashboard/: layout.tsx  (+1 more)
frontend/lib/: api.ts  types.ts
(+2 files in other folders)
