[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simworld-backend"
version = "0.1.0"
description = "SimWorld Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "neo4j>=5.18.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.9",
    "greenlet>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "models",
    "schemas",
    "api",
    "workers",
    "db"
]